; ModuleID = '/home/carl/AnghaBench/linux/drivers/thermal/intel/extr_intel_quark_dts_thermal.c__get_trip_temp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/thermal/intel/extr_intel_quark_dts_thermal.c__get_trip_temp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dts_update_mutex = common dso_local global i32 0, align 4
@QRK_MBI_UNIT_RMU = common dso_local global i32 0, align 4
@MBI_REG_READ = common dso_local global i32 0, align 4
@QRK_DTS_REG_OFFSET_PTPS = common dso_local global i32 0, align 4
@QRK_DTS_SHIFT_TP = common dso_local global i32 0, align 4
@QRK_DTS_MASK_TP_THRES = common dso_local global i32 0, align 4
@QRK_DTS_TEMP_BASE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @_get_trip_temp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_get_trip_temp(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %8 = call i32 @mutex_lock(i32* @dts_update_mutex)
  %9 = load i32, i32* @QRK_MBI_UNIT_RMU, align 4
  %10 = load i32, i32* @MBI_REG_READ, align 4
  %11 = load i32, i32* @QRK_DTS_REG_OFFSET_PTPS, align 4
  %12 = call i32 @iosf_mbi_read(i32 %9, i32 %10, i32 %11, i32* %7)
  store i32 %12, i32* %6, align 4
  %13 = call i32 @mutex_unlock(i32* @dts_update_mutex)
  %14 = load i32, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32, i32* %6, align 4
  store i32 %17, i32* %3, align 4
  br label %33

18:                                               ; preds = %2
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @QRK_DTS_SHIFT_TP, align 4
  %22 = mul nsw i32 %20, %21
  %23 = ashr i32 %19, %22
  %24 = load i32, i32* @QRK_DTS_MASK_TP_THRES, align 4
  %25 = and i32 %23, %24
  %26 = load i32*, i32** %5, align 8
  store i32 %25, i32* %26, align 4
  %27 = load i64, i64* @QRK_DTS_TEMP_BASE, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %28, align 4
  %30 = sext i32 %29 to i64
  %31 = sub nsw i64 %30, %27
  %32 = trunc i64 %31 to i32
  store i32 %32, i32* %28, align 4
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %18, %16
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @iosf_mbi_read(i32, i32, i32, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
